# liblsl-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: inlets.rs  outlets.rs  receive_data.rs  receive_data_advanced.rs  receive_data_in_chunks.rs  receive_string_markers.rs  resolving.rs  resolving_continuously.rs  send_data.rs  send_data_advanced.rs  send_data_in_chunks.rs  send_string_markers.rs  streaminfo.rs
examples/rough/: inlets.rs  receive_string_markers_buf.rs  resolving.rs  standalone_funcs.rs  streaminfo.rs
lsl-sys/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
lsl-sys/src/: generated.rs  lib.rs
src/: lib.rs  utils.rs
tests/: lib.rs
